# haitong-quant

./: .gitignore  README.md  pyproject.toml
configs/: akshare.json  default.json  generated_stock_screen.json  stock_screen.json
data/: generated_stock_news_scores.csv  industry_map.csv  news_scores.generated.csv  sample_news_scores.csv  sample_prices.csv  sample_raw_news.csv  sample_universe_rows.csv  stock_news_scores.generated.csv  universe.generated.csv
reports/: daily_report.md  dashboard.html  generated_stock_report.md  research_report.md  stock_screen_report.md  stock_screen_watchlist.md  trade_plan.csv  trade_plan.json
scripts/: notify_test_wechat.ps1  run_dashboard.ps1  run_monitor_wechat.ps1  setup_env.ps1
src/haitong_quant/: __init__.py  cli.py  config.py  logging_config.py  models.py
src/haitong_quant/analysis/: __init__.py  correlation.py  daily_report.py  industry.py  journal.py  news.py  report.py  screener.py  trade_plan.py  universe.py
src/haitong_quant/backtest/: __init__.py  backtrader_runner.py  engine.py  optimizer.py  walk_forward.py
src/haitong_quant/broker/: __init__.py  base.py  gui_readonly.py  mock.py  paper_engine.py  qmt_proxy.py
src/haitong_quant/data/: __init__.py  cache.py  sources.py
tests/: test_backtest.py  test_broker_and_ops.py  test_cache.py  test_daily_report.py  test_dashboard.py  test_journal.py  test_paper_engine.py  test_portfolio_rules.py  test_report.py  test_risk.py  test_screener.py  test_strategy.py  test_trade_plan.py  test_universe.py  test_v11_features.py  test_walk_forward.py
(+20 files in other folders)
